# alt-stm32f30x-hal

./: .travis.yml  Cargo.toml  Makefile  README.md
src/: bb.rs  delay.rs  dma.rs  exti.rs  flash.rs  gpio.rs  i2c.rs  lib.rs  prelude.rs  pwm.rs  rcc.rs  serial.rs  spi.rs  syscfg.rs  time.rs  timer.rs
