[package]
authors = ["Roma Sokolov", "Alexander Zhuravlev", "Jorge Aparicio <jorge@japaric.io>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Alternative HAL impl for the STM32F30x family of microcontrollers"
readme = "Readme.md"
keywords = ["arm", "cortex-m", "stm32", "hal"]
license = "MIT OR Apache-2.0"
name = "alt-stm32f30x-hal"
repository = "https://github.com/copterust/alt-stm32f30x-hal"
version = "0.7.0"

[dependencies]
cortex-m = "0.5.4"
nb = "0.1.0"
stm32f30x = "0.7.0"
bobbin-bits = "0.1.1"

[dependencies.embedded-hal]
version = "0.2.1"
features = ["unproven"]

[dependencies.void]
default-features = false
version = "1.0.2"

[dependencies.cast]
default-features = false
version = "0.2.2"

[features]
rt = ["stm32f30x/rt"]
