[package]
authors = ["Roma Sokolov", "Alexander Zhuravlev", "Jorge Aparicio <jorge@japaric.io>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Alternative HAL impl for the STM32F30x family of microcontrollers"
readme = "README.md"
keywords = ["arm", "cortex-m", "stm32", "hal"]
license = "MIT OR Apache-2.0"
name = "alt-stm32f30x-hal"
repository = "https://github.com/copterust/alt-stm32f30x-hal"
version = "0.14.1"
edition = "2018"

[dependencies]
cortex-m = "0.5.8"
nb = "0.1.0"
bobbin-bits = "0.1.1"
bitrate = "0.1.1"

[dependencies.stm32f30x]
version = "0.8.0"

[dependencies.hal]
features = ["unproven"]
version = "0.2.2"
package = "embedded-hal"

[dependencies.void]
default-features = false
version = "1.0.2"

[dependencies.cast]
default-features = false
version = "0.2.2"

[features]
rt = ["stm32f30x/rt"]
