[package]
authors = ["Roma Sokolov", "Alexander Zhuravlev", "Jorge Aparicio <jorge@japaric.io>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Alternative HAL impl for the STM32F30x family of microcontrollers"
readme = "README.md"
keywords = ["arm", "cortex-m", "stm32", "hal"]
license = "MIT OR Apache-2.0"
name = "alt-stm32f30x-hal"
repository = "https://github.com/copterust/alt-stm32f30x-hal"
version = "0.20.2-alpha.0"
edition = "2018"

[package.metadata.docs.rs]
features = ["stm32f303", "rt"]

[dependencies]
cortex-m = ">=0.5.8,<0.7"
nb = "0.1.0"
bobbin-bits = "0.1.1"
bitrate = "0.1.1"

[dependencies.stm32f3]
version = "0.7.0"

[dependencies.hal]
features = ["unproven"]
version = "0.2.3"
package = "embedded-hal"

[dependencies.void]
default-features = false
version = "1.0.2"

[dependencies.cast]
default-features = false
version = "0.2.2"


[features]
default = []
device-selected = []
rt = ["stm32f3/rt"]
#stm32f301 = ["stm32f3/stm32f301", "device-selected"]
#stm32f318 = ["stm32f3/stm32f301", "device-selected", "stm32f301"]
stm32f302 = ["stm32f3/stm32f302", "device-selected"]
stm32f303 = ["stm32f3/stm32f303", "device-selected"]
#stm32f373 = ["stm32f3/stm32f373", "device-selected"]
#stm32f378 = ["stm32f3/stm32f373", "device-selected", "stm32f373"]
#stm32f334 = ["stm32f3/stm32f3x4", "device-selected"]
#stm32f328 = ["stm32f3/stm32f3x8", "device-selected"]
#stm32f358 = ["stm32f3/stm32f3x8", "device-selected", "stm32f328"]
#stm32f398 = ["stm32f3/stm32f3x8", "device-selected", "stm32f328"]
